feat: refactor a deprecated integer conversion in Histogram class